<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_background_blue_red">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VerifyEmail"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/lora"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verify_Description"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_light"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_example"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_light"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_change_email"
        app:layout_constraintTop_toBottomOf="@id/tv_description">
    </TextView>

    <TextView
        android:id="@+id/tv_change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeemail"
        android:textColor="@color/darker_red"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toEndOf="@id/tv_email"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/verify_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/et_otp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/verify_otp_box"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/et_otp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/verify_otp_box"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/et_otp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/verify_otp_box"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/et_otp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/verify_otp_box"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_messageOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageOTP"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tv_messageresend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageOTP"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tv_resendcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendOTP"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_messageresend"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resendcode"
        android:background="@drawable/img_button_verify"
        android:layout_marginTop="30dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:fontFamily="@font/lora"
        android:textSize="30sp">
    </androidx.appcompat.widget.AppCompatButton>
</androidx.constraintlayout.widget.ConstraintLayout>