<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_background_register"
    android:id="@+id/register_page">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_regíter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/lg_fullsize_svg_register"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_regíter"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lora"
        android:textSize="32sp"
        android:textColor="@color/white"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_child"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/register_shadownbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/name_edit_text"
            app:layout_constraintStart_toStartOf="@id/layout_child"
            app:layout_constraintEnd_toEndOf="@id/layout_child"
            app:layout_constraintTop_toTopOf="@id/layout_child"
            android:hint="@string/hintname"
            android:paddingLeft="20dp"
            android:layout_marginTop="40dp"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/layout_child"
            app:layout_constraintEnd_toEndOf="@id/layout_child"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            android:background="@drawable/email_edit_text"
            android:hint="@string/hintemail"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/layout_child"
            app:layout_constraintEnd_toEndOf="@id/layout_child"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:background="@drawable/password_input_text"
            android:hint="@string/hintpassword"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/layout_child"
            app:layout_constraintEnd_toEndOf="@id/layout_child"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginStart="20dp"
            android:background="@drawable/register_btn_signup"/>
        <ImageView
            android:id="@+id/register_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/layout_child"
            app:layout_constraintEnd_toEndOf="@id/layout_child"
            app:layout_constraintTop_toBottomOf="@id/btn_register_signup"
            android:background="@drawable/img_register_line"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_via_facebook"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/layout_child"
            app:layout_constraintTop_toBottomOf="@id/register_line"
            android:layout_marginStart="130dp"
            android:background="@drawable/register_img_facebook"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_via_google"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/login_via_facebook"
            app:layout_constraintTop_toBottomOf="@id/register_line"
            app:layout_constraintBaseline_toBaselineOf="@id/login_via_facebook"
            android:layout_marginStart="20dp"
            android:background="@drawable/register_img_google"/>
        <TextView
            android:id="@+id/tv_login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have account? Login"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/layout_child"
            app:layout_constraintEnd_toEndOf="@id/layout_child"
            app:layout_constraintTop_toBottomOf="@id/login_via_facebook"
            app:layout_constraintBottom_toBottomOf="@id/layout_child"
            android:layout_marginBottom="40dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>